--- a/src/app/patient-registration/together-registration.component.html
+++ b/src/app/patient-registration/together-registration.component.html
@@ -1,6 +1,6 @@
 <mat-card class="card">
     <mat-card-title style="text-align:center;">Inscriete <b><u>impreuna cu donatorul tau</u></b>!</mat-card-title>
-    <mat-tab-group mat-stretch-tabs class="example-stretched-tabs">
+    <mat-tab-group mat-stretch-tabs class="example-stretched-tabs" #tabGroup>
         <mat-tab label="Primitor">
             <mat-card-content color="primary">
                 <form class="">
@@ -10,14 +10,15 @@
                             <td>
                                 <mat-form-field class="full-width">
                                     <mat-label>Nume</mat-label>
-                                    <input matInput required name="name" ngModel #name="ngModel">
+                                    <input matInput required name="name" [(ngModel)]="lastNamePatient" #name="ngModel">
                                     <mat-error *ngIf="name.invalid">Name is required</mat-error>
                                 </mat-form-field>
                             </td>
                             <td>
                                 <mat-form-field class="full-width">
                                     <mat-label>Prenume</mat-label>
-                                    <input matInput required name="firstName" ngModel #firstName="ngModel">
+                                    <input matInput required name="firstName" [(ngModel)]="firstNamePatient"
+                                        #firstName="ngModel">
                                     <mat-error *ngIf="firstName.invalid">First Name is required</mat-error>
                                 </mat-form-field>
                             </td>
@@ -27,50 +28,36 @@
                         <tr>
                             <td>
                                 <mat-form-field class="full-width">
-                                    <mat-label>Cod Numeric Personal(CNP)</mat-label>
-                                    <input matInput required name="cnp" ngModel #cnp="ngModel">
-                                    <mat-error *ngIf="cnp.invalid">CNP is required</mat-error>
+                                    <mat-label>Adresa de email</mat-label>
+                                    <input matInput placeholder="Ex: nume.prenume@gmail.com" required name="email"
+                                        [(ngModel)]="emailPatient" #email="ngModel">
+                                    <mat-error *ngIf="email.invalid">Email is required</mat-error>
                                 </mat-form-field>
                             </td>
-                            <td>
-                                <mat-form-field class="full-width">
-                                    <mat-label>Seria si Numarul CI</mat-label>
-                                    <input matInput placeholder="Ex: XX123456" required name="seriaBi" ngModel
-                                        #seriaBi="ngModel">
-                                    <mat-error *ngIf="seriaBi.invalid">IC Series is required</mat-error>
-                                </mat-form-field>
-                            </td>
-                        </tr>
-                    </table>
-
-                    <mat-form-field class="full-width">
-                        <mat-label>Adresa</mat-label>
-                        <input matInput placeholder="Ex: Str. Neculau, Nr. 21, Bloc 573, Ap. 13" required name="adress"
-                            ngModel #adress="ngModel">
-                        <mat-error *ngIf="adress.invalid">Adress is required</mat-error>
-                    </mat-form-field>
-
-                    <table class="full-width" cellspacing="0">
-                        <tr>
                             <td>
                                 <mat-form-field class="full-width">
                                     <mat-label>Orasul</mat-label>
-                                    <input matInput placeholder="Ex. Iasi" required name="city" ngModel #city="ngModel">
+                                    <input matInput placeholder="Ex: Iasi" required name="city"
+                                        [(ngModel)]="cityPatient" #city="ngModel">
                                     <mat-error *ngIf="city.invalid">City is required</mat-error>
-                                </mat-form-field>
-                            </td>
-                            <td>
-                                <mat-form-field class="full-width">
-                                    <mat-label>Judetul</mat-label>
-                                    <input matInput placeholder="Ex. Iasi" required name="country" ngModel
-                                        #country="ngModel">
-                                    <mat-error *ngIf="country.invalid">Country is required</mat-error>
                                 </mat-form-field>
                             </td>
                         </tr>
                     </table>
-                    <button mat-raised-button color="primary" class="login-button only-login-btn">
-                        Inregistrare
+
+                    <section class="example-section full-width">
+                        <label class="">Grupa de sange:</label>
+                        <mat-radio-group [(ngModel)]="grupaSangeValoarePatient" name="grupaSange" #grupaSange="ngModel">
+                            <mat-radio-button value="0">Grupa 0</mat-radio-button>
+                            <mat-radio-button value="A">Grupa A</mat-radio-button>
+                            <mat-radio-button value="B">Grupa B</mat-radio-button>
+                            <mat-radio-button value="AB">Grupa AB</mat-radio-button>
+                        </mat-radio-group>
+                    </section>
+
+                    <button mat-raised-button color="primary" class="login-button only-login-btn"
+                        (click)="tabGroup.selectedIndex=1">
+                        Inregistreaza si donatorul
                     </button>
 
                     <button mat-raised-button class="login-button" mat-dialog-close>
@@ -88,14 +75,15 @@
                             <td>
                                 <mat-form-field class="full-width">
                                     <mat-label>Nume</mat-label>
-                                    <input matInput required name="name" ngModel #name="ngModel">
+                                    <input matInput required name="name" [(ngModel)]="lastNameDonor" #name="ngModel">
                                     <mat-error *ngIf="name.invalid">Name is required</mat-error>
                                 </mat-form-field>
                             </td>
                             <td>
                                 <mat-form-field class="full-width">
                                     <mat-label>Prenume</mat-label>
-                                    <input matInput required name="firstName" ngModel #firstName="ngModel">
+                                    <input matInput required name="firstName" [(ngModel)]="firstNameDonor"
+                                        #firstName="ngModel">
                                     <mat-error *ngIf="firstName.invalid">First Name is required</mat-error>
                                 </mat-form-field>
                             </td>
@@ -105,50 +93,36 @@
                         <tr>
                             <td>
                                 <mat-form-field class="full-width">
-                                    <mat-label>Cod Numeric Personal(CNP)</mat-label>
-                                    <input matInput required name="cnp" ngModel #cnp="ngModel">
-                                    <mat-error *ngIf="cnp.invalid">CNP is required</mat-error>
+                                    <mat-label>Adresa de email</mat-label>
+                                    <input matInput placeholder="Ex: nume.prenume@gmail.com" required name="email"
+                                        [(ngModel)]="emailDonor" #email="ngModel">
+                                    <mat-error *ngIf="email.invalid">Email is required</mat-error>
                                 </mat-form-field>
                             </td>
-                            <td>
-                                <mat-form-field class="full-width">
-                                    <mat-label>Seria si Numarul CI</mat-label>
-                                    <input matInput placeholder="Ex: XX123456" required name="seriaBi" ngModel
-                                        #seriaBi="ngModel">
-                                    <mat-error *ngIf="seriaBi.invalid">IC Series is required</mat-error>
-                                </mat-form-field>
-                            </td>
-                        </tr>
-                    </table>
-
-                    <mat-form-field class="full-width">
-                        <mat-label>Adresa</mat-label>
-                        <input matInput placeholder="Ex: Str. Neculau, Nr. 21, Bloc 573, Ap. 13" required name="adress"
-                            ngModel #adress="ngModel">
-                        <mat-error *ngIf="adress.invalid">Adress is required</mat-error>
-                    </mat-form-field>
-
-                    <table class="full-width" cellspacing="0">
-                        <tr>
                             <td>
                                 <mat-form-field class="full-width">
                                     <mat-label>Orasul</mat-label>
-                                    <input matInput placeholder="Ex. Iasi" required name="city" ngModel #city="ngModel">
+                                    <input matInput placeholder="Ex: Iasi" required name="city" [(ngModel)]="cityDonor"
+                                        #city="ngModel">
                                     <mat-error *ngIf="city.invalid">City is required</mat-error>
-                                </mat-form-field>
-                            </td>
-                            <td>
-                                <mat-form-field class="full-width">
-                                    <mat-label>Judetul</mat-label>
-                                    <input matInput placeholder="Ex. Iasi" required name="country" ngModel
-                                        #country="ngModel">
-                                    <mat-error *ngIf="country.invalid">Country is required</mat-error>
                                 </mat-form-field>
                             </td>
                         </tr>
                     </table>
-                    <button mat-raised-button color="primary" class="login-button only-login-btn">
-                        Inregistrare
+
+                    <section class="example-section full-width">
+                        <label class="">Grupa de sange:</label>
+                        <mat-radio-group [(ngModel)]="grupaSangeValoareDonor" name="grupaSange" #grupaSange="ngModel">
+                            <mat-radio-button value="0">Grupa 0</mat-radio-button>
+                            <mat-radio-button value="A">Grupa A</mat-radio-button>
+                            <mat-radio-button value="B">Grupa B</mat-radio-button>
+                            <mat-radio-button value="AB">Grupa AB</mat-radio-button>
+                        </mat-radio-group>
+                    </section>
+
+                    <button mat-raised-button color="primary" class="login-button only-login-btn" mat-dialog-close
+                        (click)=togetherRegistation()>
+                        Inregistrare pereche pacient + donator
                     </button>
 
                     <button mat-raised-button class="login-button" mat-dialog-close>
