--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,8 +16,8 @@
                         routerLinkActive="active" href="#info">Informații</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="setpageTitle('Ajută Donând')"
                         routerLinkActive="active" href="#helpDonating">Ajută Donând</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="setpageTitle('Statistici')"
-                        routerLinkActive="active" href="#statistic">Statistici</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" (click)="setpageTitle('Perechi Finale')"
+                        routerLinkActive="active" href="#perechi">Perechi Finale</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger"
                         (click)="setpageTitle('Înscrie-te ca Pacient')" routerLinkActive="active"
                         href="#registerPatients">Înscrie-te ca
@@ -32,15 +32,14 @@
                         routerLinkActive="active" *ngIf="loginService.isUserLoggedIn()">Deconectare</a></li>
             </ul>
             <a *ngIf="loginService.isUserLoggedIn()" [routerLink]="'/profile'">
-                <!-- <mat-icon class="border-account">account_circle</mat-icon> -->
-                <button class="account-button" data-tooltip="Vizualizati Profilul">
+                <button class="account-button" data-tooltip="Profilul">
                     <img src="../../assets/img/account_icon.jfif" alt="Acount Icon">
                 </button>
             </a>
         </div>
     </div>
 </nav>
-<mat-progress-spinner class="centered" mode="indeterminate" value="20" color="warn" *ngIf="loginService.isWait">
+<mat-progress-spinner class="centered" mode="indeterminate" value="20" color="" *ngIf="loginService.isWait">
 </mat-progress-spinner>
 
 <!-- Masthead-->
@@ -48,16 +47,16 @@
     <div class="container h-100">
         <div class="row h-100 align-items-center justify-content-center text-center">
             <div class="col-lg-10 align-self-end">
-                <h1 class="text-uppercase text-white font-weight-bold">Aceasta platforma sustine transplantul de rinichi
-                    pe regiunea Romaniei</h1>
+                <h1 class="text-uppercase text-white font-weight-bold">Această platformă susține transplantul de rinichi
+                    pe regiunea României</h1>
                 <hr class="divider my-4" />
             </div>
             <div class="col-lg-8 align-self-baseline">
-                <p class="text-white-75 font-weight-light mb-5 p-describe">Doresti sa-ti donezi rinichiul unui membru al
+                <p class="text-white-75 font-weight-light mb-5 p-describe">Doresti să-ți donezi rinichiul unui membru al
                     familiei
-                    sau unui prieten, te poti inscrie si intra in programul nostru de cautare donatori apasand butonul
+                    sau unui prieten, te poți înscrie și intra în programul nostru de cautare donatori apasand butonul
                     de mai jos:</p>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#helpDonating">Doneaza-ti rinichiul!</a>
+                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#helpDonating">Donează-ți rinichiul!</a>
             </div>
         </div>
     </div>
